--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,52 @@
+black==25.1.0
+cfgv==3.4.0
+click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
 diffrax==0.6.2
+distlib==0.3.9
 equinox==0.11.12
+filelock==3.18.0
+flake8==7.2.0
 fonttools==4.56.0
+identify==2.6.9
+iniconfig==2.1.0
 jax==0.5.3
 jaxlib==0.5.3
 jaxtyping==0.2.38
+julia==0.6.2
 kiwisolver==1.4.8
 lineax==0.0.7
 matplotlib==3.10.1
+mccabe==0.7.0
 ml_dtypes==0.5.1
 mpmath==1.3.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 numpy==2.2.4
 opt_einsum==3.4.0
 optimistix==0.0.10
 packaging==24.2
+pathspec==0.12.1
 pillow==11.1.0
+platformdirs==4.3.7
+pluggy==1.5.0
+pre_commit==4.2.0
+pycodestyle==2.13.0
+pyflakes==3.3.2
 pyparsing==3.2.3
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.16
 PyQt5_sip==12.17.0
+pytest==8.3.5
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
 scipy==1.15.2
+setuptools==78.1.0
 six==1.17.0
 sympy==1.13.3
 typeguard==2.13.3
 typing_extensions==4.12.2
+virtualenv==20.30.0
 wadler_lindig==0.1.3
+wheel==0.46.1
